move to java 17 and update README.md